# opencrust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  docker-compose.ollama.yml
.github/workflows/: ci.yml
assets/webchat/: main.js  styles.css
assets/webchat/integrations/: google.js  main.js  styles.css
crates/opencrust-agents/: Cargo.toml
crates/opencrust-agents/src/: anthropic.rs  lib.rs  openai.rs  providers.rs  runtime.rs
crates/opencrust-agents/tests/: anthropic_integration.rs  anthropic_test.rs  health_check_concurrency.rs  openai_test.rs
crates/opencrust-channels/: Cargo.toml
crates/opencrust-channels/src/: lib.rs  telegram.rs  telegram_fmt.rs  traits.rs
crates/opencrust-cli/: Cargo.toml
crates/opencrust-cli/src/: main.rs  migrate.rs  wizard.rs
crates/opencrust-common/src/: message.rs
crates/opencrust-config/src/: lib.rs  loader.rs  model.rs
crates/opencrust-db/: Cargo.toml
crates/opencrust-db/src/: lib.rs  memory_store.rs  migrations.rs  session_store.rs
crates/opencrust-gateway/: Cargo.toml
crates/opencrust-gateway/src/: agent_router.rs  api.rs  bootstrap.rs  lib.rs  (+7 more)
crates/opencrust-plugins/: Cargo.toml
crates/opencrust-plugins/src/: manifest.rs  runtime.rs  traits.rs
crates/opencrust-security/: Cargo.toml
deploy/macos/: com.opencrust.gateway.plist
docs/: book.toml  open-issues-backlog.md
docs/src/: README.md  SUMMARY.md  architecture.md  channels.md  getting_started.md  mcp.md  plugins.md  providers.md  security.md  tools.md
sidecar/whatsapp-web/: index.mjs  package.json
(+31 files in other folders)
